--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "protobufjs": "=3.0.0",
     "sjcl": "=1.0.1",
     "socks5-client": "~0.3.6",
-    "bitzeny-yescrypt": "git://github.com/BitzenyCoreDevelopers/node-bitzeny-yescrypt.git"
+    "bitzeny-yescrypt": "git://github.com/BitzenyCoreDevelopers/node-bitzeny-yescrypt.git",
+    "scrypt": "git://github.com/barrysteyn/node-scrypt.git"
   },
   "testling": {
     "harness": "mocha-bdd",
