fix: scrypt + DOGED 개발자참고
Block.prototype.calcHash = function calcHash() {
  var header = this.getHeader();

  return this.version == 7 ? util.twoSha256(header) : util.scrypt(header);
};

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "protobufjs": "=3.0.0",
     "sjcl": "=1.0.1",
     "socks5-client": "~0.3.6",
-    "bitzeny-yescrypt": "git://github.com/BitzenyCoreDevelopers/node-bitzeny-yescrypt.git"
+    "bitzeny-yescrypt": "git://github.com/BitzenyCoreDevelopers/node-bitzeny-yescrypt.git",
+    "scrypt-jane-hash": "git://github.com/zone117x/node-scrypt-jane-hash"
   },
   "testling": {
     "harness": "mocha-bdd",
